# dialbot-whisper-api

./: .gitignore  Dockerfile  README.md  dialbot.env  dialbot.service  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: main.yml  pr.yml
dialbot/: app.py  run.py  transcribe.py
dialbot/api/: transcribe.py
dialbot/endpoints/: health.py  transcribe.py
dialbot/util/: auth.py
tests/: run.py  test_transcribe.py
